2014-09-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/ajax/reporting.ajax.php
	  godmode/reporting/reporting_builder.item_editor.php:
	Added hooks to the enterprise services SLA reports.

2014-09-04  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ru.mo
	include/languages/pt.po
	include/languages/zh_TW.mo
	include/languages/el.mo
	include/languages/zh_CN.mo
	include/languages/cs.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/en_GB.mo
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/sk.po
	include/languages/pt.mo
	include/languages/en_AU.po
	include/languages/ar.po
	include/languages/en.po
	include/languages/cs.mo
	include/languages/es.mo
	include/languages/pt_BR.po
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/en_AU.mo
	include/languages/tr.po
	include/languages/fa.po
	include/languages/de.po
	include/languages/ja.po
	include/languages/ar.mo
	include/languages/en.mo
	include/languages/pt_BR.mo
	include/languages/fr.mo
	include/languages/tr.mo
	include/languages/fa.mo
	include/languages/de.mo
	include/languages/ru.po
	include/languages/ja.mo
	include/languages/zh_TW.po
	include/languages/el.po
	include/languages/zh_CN.po
	include/languages/nl.po
	include/languages/en_GB.po
	include/languages/pl.po
	include/languages/it.po: Update languages
	from launchpad
	
2014-09-04  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/index.pot: Updated new strings
	to translate.
	
2014-09-04  Miguel de Dios <miguel.dedios@artica.es>

	* pandora_console/extensions/module_groups.php,
	pandora_console/general/login_help_dialog.php,
	pandora_console/images/close_button_dialog.png,
	pandora_console/images/documentation.png,
	pandora_console/images/enterprise_version.png,
	pandora_console/images/error_login.png,
	pandora_console/images/online_help.png,
	pandora_console/images/support.png,
	pandora_console/include/ajax/events.php,
	pandora_console/include/constants.php,