@@ -1,3 +1,8 @@
+2014-09-06  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_alert_macros.php: Translated new macro
+	descriptions.
+
 2014-09-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/ajax/reporting.ajax.php
